Align filters flex-end to prevent breakage in select/input appearance

--- a/app/assets/stylesheets/components/_client-filters.scss
+++ b/app/assets/stylesheets/components/_client-filters.scss
@@ -28,7 +28,7 @@
 
   .filters-wrapper {
     display: inline-flex;
-    align-items: top;
+    align-items: flex-end;
     .form-group {
       margin-right: 1rem;
     }
